--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@ body {
     }
 }
 #page{
-    overflow: auto;
+    // overflow: auto;
     @media only screen and (max-height: 850px){
         overflow-y: scroll;
     }
@@ -32,11 +32,11 @@ body {
     margin: auto;
     .leftColumn{
         height: 800px;
-        display: flex;
+        // display: flex;
         flex-direction:column;
         grid-column : 2 / span 1;
         .infos{
-            height: 290px;
+            height: 280px;
             .infoTxt{
                 position : relative;
                 top : -190px;
@@ -123,7 +123,7 @@ body {
         grid-column : 6 / span 1;
         height: 800px;
         .autoplank{
-            height: 630px;
+            height: 640px;
             .auto1Txt{
                 position : relative;
                 top:-550px;
@@ -357,7 +357,7 @@ body {
 
         #hScore {
             text-align: center;
-            font-size : 35px ; 
+            font-size : 34px ; 
             color : #eae4cc ; 
             font-family: "Westmeath",arial,sans-serif;
             // text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
