add autoclick 2 wip

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
 @import 'bananaMult.scss';
 @import 'monkey.scss';
 @import 'bonus.scss';
+@import 'monkey2.scss';
+
 html {
     min-height: 100%;
 }
