--- a/css/style.css
+++ b/css/style.css
@@ -470,12 +470,12 @@ table {
   display: block;
   background: none;
   /*border: 1px solid black;*/
-  width: 800px;
-  height: 600px;
+  width: 200px;
+  height: 150px;
   top: 8%;
 }
 
-.head {
+.head2 {
   position: absolute;
   top: 8%;
   left: 25%;
@@ -677,7 +677,7 @@ table {
   width: 25%;
   background: #fff;
   border-radius: 50%;
-  border: 7px solid #000;
+  border: 3px solid #000;
   animation-name: blink;
 }
 
@@ -689,7 +689,7 @@ table {
   width: 25%;
   background: #fff;
   border-radius: 50%;
-  border: 7px solid #000;
+  border: 3px solid #000;
 }
 
 .eyelid {
@@ -699,7 +699,7 @@ table {
   height: 50%;
   width: 101%;
   border-radius: 90px 90px 0 0;
-  border-bottom: 5px solid #000;
+  border-bottom: 3px solid #000;
   background: #a0522d;
   z-index: 1;
   animation-name: blink;
@@ -734,7 +734,7 @@ table {
 
 .pupil {
   position: absolute;
-  top: 40%;
+  top: 41%;
   left: 35%;
   height: 30%;
   width: 30%;
@@ -746,8 +746,8 @@ table {
   position: absolute;
   width: 110%;
   height: 70%;
-  left: -15px;
-  top: 65%;
+  left: -5%;
+  top: 70%;
   border-radius: 30%;
   background: #f4a460;
   z-index: 1;
@@ -760,8 +760,8 @@ table {
   position: absolute;
   width: 99%;
   height: 30%;
-  left: 2%;
-  top: 62%;
+  left: 0%;
+  top: 67%;
   border-radius: 50%;
   background: #f4a460;
   z-index: 1;
@@ -771,7 +771,7 @@ table {
   position: absolute;
   width: 99%;
   height: 30%;
-  left: 2%;
+  left: 1%;
   bottom: -38%;
   border-radius: 50%;
   background: #f4a460;
@@ -782,8 +782,8 @@ table {
   position: absolute;
   width: 60%;
   height: 32%;
-  left: -21%;
-  bottom: -16%;
+  left: -22%;
+  bottom: -21%;
   border-radius: 50%;
   background: #f4a460;
   z-index: 1;
@@ -794,8 +794,8 @@ table {
   position: absolute;
   width: 60%;
   height: 32%;
-  right: -23%;
-  bottom: -16%;
+  right: -22%;
+  bottom: -21%;
   border-radius: 50%;
   background: #f4a460;
   z-index: 1;
@@ -817,8 +817,8 @@ table {
 
 .nostril-left {
   position: absolute;
-  top: 70%;
-  left: 34%;
+  top: 71%;
+  left: 35%;
   background: #2a2422;
   width: 10%;
   height: 5%;
@@ -828,7 +828,7 @@ table {
 
 .nostril-right {
   position: absolute;
-  top: 70%;
+  top: 71%;
   left: 54%;
   background: #2a2422;
   width: 10%;
@@ -837,13 +837,13 @@ table {
   z-index: 1;
 }
 
-.mouth {
+.mouth2 {
   width: 80%;
   height: 40%;
   border-top: 20px solid #fff;
   position: absolute;
   bottom: -23%;
-  left: 11%;
+  left: 10%;
   border-radius: 50%;
   z-index: 1;
   transform: rotate(180deg);
@@ -980,6 +980,21 @@ body {
   cursor: pointer;
 }
 #page .rightColumn .autoplank .auto1Txt #hAutoclick {
+  margin-top: 2vh;
+}
+#page .rightColumn .autoplank .auto2Txt {
+  position: relative;
+  top: -500px;
+  display: flex;
+  flex-direction: column;
+  z-index: 4;
+  text-align: center;
+  justify-content: space-around;
+}
+#page .rightColumn .autoplank .auto2Txt .monkey2 {
+  cursor: pointer;
+}
+#page .rightColumn .autoplank .auto2Txt #hAutoclick2 {
   margin-top: 2vh;
 }
 
@@ -1244,6 +1259,13 @@ body {
   src: url("../public/fonts/AlphaFridgeMagnetsAllCaps.ttf") format("truetype");
 }
 #hAutoclick {
+  text-align: center;
+  color: #eae4cc;
+  font-size: 29px;
+  font-family: "Westmeath2", arial, sans-serif;
+}
+
+#hAutoclick2 {
   text-align: center;
   color: #eae4cc;
   font-size: 29px;
