--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ body {
             top: 15vh;
             width: 448px;
         }
+        //banane
         #hClick{
             position: fixed;
             cursor: pointer;
@@ -108,6 +109,7 @@ body {
             height: 200px;
             margin-left : 124px;
         }
+        //banane bonus
         #hBonus{
             position: fixed;
             cursor: pointer;
@@ -115,7 +117,11 @@ body {
             width: 200px;
             height: 200px;
             margin-left : 163px;
+            animation: spin 0.5s linear infinite;
         }
+        //animation banane bonus
+        @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } };
+
     }
     .rightColumn{
         display: flex;
