--- a/scss/_monkey.scss
+++ b/scss/_monkey.scss
@@ -12,7 +12,7 @@
 	width: 95px;
 	height: 100px;
 	border-radius: 100%;
-	background: #9b7b53;
+	background: #a0522d;
 	z-index: 100;
 	top: 10%;
 	left: 10%;
@@ -23,7 +23,7 @@
 	width: 35px;
 	height: 35px;
 	border-radius: 100%;
-	background: #9b7b53;
+	background: #a0522d;
 	z-index: 98;
 	top: 33%;
 }
@@ -33,7 +33,7 @@
 	width: 35px;
 	height: 35px;
 	border-radius: 100%;
-	background: #9b7b53;
+	background: #a0522d;
 	z-index: 98;
 	top: 33%;
 	left: 69%;
