--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ table {
   height: 27.5px;
   border-radius: 100%;
   z-index: 99;
-  background: #fff6e0;
+  background: #f4a460;
   top: 10%;
   left: 5%;
 }
@@ -311,7 +311,7 @@ table {
   height: 27.5px;
   border-radius: 100%;
   z-index: 99;
-  background: #fff6e0;
+  background: #f4a460;
   top: 10%;
   left: 15%;
 }
@@ -322,7 +322,7 @@ table {
   height: 60px;
   border-radius: 50%;
   z-index: 101;
-  background: #fff6e0;
+  background: #f4a460;
   top: 42%;
   left: 14%;
 }
@@ -333,7 +333,7 @@ table {
   height: 75px;
   border-radius: 100%;
   z-index: 101;
-  background: #fff6e0;
+  background: #f4a460;
   top: 25%;
   left: 20%;
 }
@@ -344,7 +344,7 @@ table {
   height: 7.5px;
   border-radius: 100%;
   z-index: 102;
-  background: #543f22;
+  background: #3d2e19;
   top: 30%;
   left: 20%;
 }
@@ -355,7 +355,7 @@ table {
   height: 7.5px;
   border-radius: 100%;
   z-index: 102;
-  background: #543f22;
+  background: #3d2e19;
   top: 30%;
   left: 70%;
 }
@@ -366,7 +366,7 @@ table {
   height: 1px;
   border-radius: 100%;
   z-index: 102;
-  background: #543f22;
+  background: #3d2e19;
   top: 55%;
   left: 38%;
 }
@@ -377,7 +377,7 @@ table {
   height: 1px;
   border-radius: 100%;
   z-index: 102;
-  background: #543f22;
+  background: #3d2e19;
   top: 55%;
   left: 52%;
 }
@@ -389,7 +389,7 @@ table {
   z-index: 102;
   top: 65%;
   left: 17%;
-  border: solid 2px #543f22;
+  border: solid 2px #3d2e19;
   border-color: transparent transparent #543f22 transparent;
   border-radius: 100%;
 }
