--- a/scss/_monkey.scss
+++ b/scss/_monkey.scss
@@ -45,7 +45,7 @@
 	height: 27.5px;
 	border-radius: 100%;
 	z-index: 99;
-   	background: #fff6e0;
+   	background: #f4a460;
    	top: 10%;
    	left: 5%;
 }
@@ -56,7 +56,7 @@
 	height: 27.5px;
 	border-radius: 100%;
 	z-index: 99;
-   	background: #fff6e0;
+   	background: #f4a460;
    	top: 10%;
    	left: 15%;
 }
@@ -67,7 +67,7 @@
 	height: 60px;
 	border-radius: 50%;
 	z-index: 101;
-	background: #fff6e0;
+	background: #f4a460;
 	top: 42%;
 	left: 14%;
 }
@@ -78,7 +78,7 @@
 	height: 75px;
 	border-radius: 100%;
 	z-index: 101;
-	background: #fff6e0;
+	background: #f4a460;
 	top: 25%;
 	left: 20%;
 }
@@ -89,7 +89,7 @@
 	height: 7.5px;
 	border-radius: 100%;
 	z-index: 102;
-	background: #543f22;
+	background: #3d2e19;
 	top: 30%;
 	left: 20%;
 }
@@ -100,7 +100,7 @@
 	height: 7.5px;
 	border-radius: 100%;
 	z-index: 102;
-	background: #543f22;
+	background: #3d2e19;
 	top: 30%;
 	left: 70%;
 }
@@ -111,7 +111,7 @@
 	height: 1px;
 	border-radius: 100%;
 	z-index: 102;
-	background: #543f22;
+	background: #3d2e19;
 	top: 55%;
 	left: 38%;
 }
@@ -122,7 +122,7 @@
 	height: 1px;
 	border-radius: 100%;
 	z-index: 102;
-	background: #543f22;
+	background: #3d2e19;
 	top: 55%;
 	left: 52%;
 }
@@ -134,7 +134,7 @@
 	z-index: 102;
 	top: 65%;
 	left: 17%;
-	border: solid 2px #543f22;
+	border: solid 2px #3d2e19;
     border-color:  transparent transparent #543f22 transparent;
     border-radius: 100%;
 }
