pos autoclickers centered

--- a/css/style.css
+++ b/css/style.css
@@ -955,6 +955,7 @@ body {
 #page .rightColumn .autoplank .auto1Txt {
   position: relative;
   top: -570px;
+  left: 6px;
   display: flex;
   flex-direction: column;
   z-index: 4;
@@ -970,6 +971,7 @@ body {
 #page .rightColumn .autoplank .auto2Txt {
   position: relative;
   top: -480px;
+  left: 6px;
   display: flex;
   flex-direction: column;
   z-index: 4;
