--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,6 +129,7 @@ body {
             .auto1Txt{
                 position : relative;
                 top:-570px;
+                left: 6px;
                 display: flex;
                 flex-direction: column;
                 z-index : 4;
@@ -142,6 +143,7 @@ body {
             .auto2Txt{
                 position : relative;
                 top:-480px;
+                left: 6px;
                 display: flex;
                 flex-direction: column;
                 z-index : 4;
