--- a/css/style.css
+++ b/css/style.css
@@ -442,23 +442,6 @@ table {
   transform: scale(2) rotate(-4deg);
 }
 
-<<<<<<< HEAD
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
 .monkey2 {
   position: relative;
   margin: auto;
@@ -844,8 +827,6 @@ table {
   transform: rotate(180deg);
 }
 
-=======
->>>>>>> estel
 html {
   min-height: 100%;
 }
@@ -950,10 +931,10 @@ body {
 #page .centralColumn #hBonus {
   position: fixed;
   cursor: pointer;
-  top: 51vh;
+  top: -1000px;
+  z-index: 30;
   width: 200px;
   height: 200px;
-  margin-left: 163px;
   animation: spin 0.5s linear infinite;
 }
 @keyframes spin {
