bonus button now appear at a random time after reloading the page

--- a/css/style.css
+++ b/css/style.css
@@ -929,6 +929,7 @@ body {
   margin-left: 124px;
 }
 #page .centralColumn #hBonus {
+  display: none;
   position: fixed;
   cursor: pointer;
   top: -1000px;
