--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,6 +107,7 @@ body {
         }
         //banane bonus
         #hBonus{
+            display: none;
             position: fixed;
             cursor: pointer;
             top: -1000px;
